--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -7,14 +7,14 @@ on:
     types: [started]
     
 env:              
-  ROM_URL: 'https://dl.google.com/developers/android/sc/images/ota/redfin-ota-spp2.210219.008-3d61e529.zip'
-  ZIP_NAME: 'update.zip'
-  OS_TYPE: 'Pixel'
-  BUILD_TYPE: 'ab'
-  REPACK_NAME: 'SGSI.zip'
+  ROM_URL: 'https://cloud189-liaoning-person.oos-lnsy.ctyunapi.cn/PERSONCLOUD/7d31d4a7-66e3-4bc1-a5e9-54457c405c42.ozip?x-amz-CLIENTTYPEIN=UNKNOWN&AWSAccessKeyId=532482dfdc85e5d60592&x-amz-UID=828675377&x-amz-APPID=828221&response-content-disposition=attachment%3Bfilename%3D%22PDEM30_11_OTA_10901510_all_RjUGGpYGiU1t_cdf23.ozip%22&x-amz-CLIENTNETWORK=UNKNOWN&x-amz-CLOUDTYPEIN=PERSON&x-amz-limit=rate%3D10240%2Cconcurrency%3D10&Signature=zuzzQzDC9tYV3z8nmlvJBQgJV%2Bc%3D&x-amz-SHID=171501428&Expires=1621422245&x-amz-FSIZE=4214545136&x-amz-UFID=11514112793737412'
+  ZIP_NAME: 'PDEM30_11_OTA_10901510_all_RjUGGpYGiU1t_cdf23.ozip'
+  OS_TYPE: 'ColorOS11'
+  BUILD_TYPE: 'a-only'
+  REPACK_NAME: '肥龙爱OPPO.zip'
   VERSION: '12'
   upload_WeTransfer: 'true'
-  upload_action-gh-release: 'false'
+  upload_action-gh-release: 'true'
   SETUP: 'true'
   
 jobs:
