--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -7,12 +7,12 @@ on:
     types: [started]
     
 env:              
-  ROM_URL: 'https://cloud189-liaoning-person.oos-lnsy.ctyunapi.cn/PERSONCLOUD/7d31d4a7-66e3-4bc1-a5e9-54457c405c42.ozip?x-amz-CLIENTTYPEIN=UNKNOWN&AWSAccessKeyId=532482dfdc85e5d60592&x-amz-UID=828675377&x-amz-APPID=828221&response-content-disposition=attachment%3Bfilename%3D%22PDEM30_11_OTA_10901510_all_RjUGGpYGiU1t_cdf23.ozip%22&x-amz-CLIENTNETWORK=UNKNOWN&x-amz-CLOUDTYPEIN=PERSON&x-amz-limit=rate%3D10240%2Cconcurrency%3D10&Signature=jDO%2BXxhzmaeOI00KDlRQSMksyWk%3D&x-amz-SHID=171501428&Expires=1621443834&x-amz-FSIZE=4214545136&x-amz-UFID=11514112793737412'
-  ZIP_NAME: 'PDEM30_11_OTA_10901510_all_RjUGGpYGiU1t_cdf23.zip'
-  OS_TYPE: 'color'
+  ROM_URL: 'https://hugeota.d.miui.com/21.3.25/miui_UMI_21.3.25_0667a7709b_11.0.zip'
+  ZIP_NAME: '肥龙.zip'
+  OS_TYPE: 'miui'
   BUILD_TYPE: 'a-only'
   REPACK_NAME: 'qwq.zip'
-  VERSION: '12'
+  VERSION: '11'
   upload_WeTransfer: 'true'
   upload_action-gh-release: 'true'
   SETUP: 'true'
