--- a/.github/workflows/SGSI_Build.yml
+++ b/.github/workflows/SGSI_Build.yml
@@ -7,7 +7,7 @@ on:
     types: [started]
     
 env:              
-  ROM_URL: 'https://hugeota.d.miui.com/21.3.25/miui_UMI_21.3.25_0667a7709b_11.0.zip'
+  ROM_URL: 'https://download.meizu.com/Firmware/Flyme/meizu17_Pro/9.21.5.17/cn_daily/20210517184206/0b777e3b/update.zip'
   ZIP_NAME: '肥龙.zip'
   OS_TYPE: 'miui'
   BUILD_TYPE: 'a-only'
